<resources>
    <string name="app_name">Reading Diary</string>

    <string name="button_addEntry">Add Entry</string>
    <string name="button_editEntry">Edit Entry</string>
    <string name="button_addImage"> Add Image </string>

    <string name="select_entry_image">Select entry image</string>
    <string name="change_entry_image">Change entry image</string>

    <string name="hint_entryTitle">Book Title</string>
    <string name="hint_entryDescription">Review</string>
    <string name="hint_entryDate">Date finished </string>

    <string name="menu_addEntry">Log</string>
    <string name="menu_cancelEntry">Cancel</string>
    <string name="menu_deleteEntry">Delete</string>

    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_text">Login</string>

    <string name="confirm_password_hint">Confirm Password</string>
    <string name="signup_text">Signup</string>




</resources>